# Report_Creation

./: structure.txt
maket_trend/: README.md  pyproject.toml
maket_trend/report_generation/: market_research.txt
maket_trend/src/maket_trend/: crew.py  main.py
maket_trend/src/maket_trend/config/: agents.yaml  tasks.yaml
maket_trend/src/maket_trend/tools/: custom_tool.py
market_report_generation/: README.md  pyproject.toml
market_report_generation/src/market_report_generation/: crew.py  main.py
