[tool.poetry]
name = "market_report_generation"
version = "0.1.0"
description = "market_report_generation using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
market_report_generation = "market_report_generation.main:run"
run_crew = "market_report_generation.main:run"
train = "market_report_generation.main:train"
replay = "market_report_generation.main:replay"
test = "market_report_generation.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
